# AI-Courtroom-Harness

./: .env.example  .gitignore  AGENTS.md  COLAB_NOTEBOOK.ipynb  IMPLEMENTATION_PLAN.md  README.md  V1_IMPLEMENTATION_PLAN.md  V2_IMPLEMENTATION_PLAN.md  package.json  project-summary.md  pyproject.toml
apps/api/app/: case_parser.py  case_store.py  main.py
apps/web/: AI_PROMPT_FE_HANDOFF.md  FRONTEND_MVP_PLAN.md  README.md
docs/: COLAB_VECTOR_SETUP.md  MODEL_BENCHMARKS.md  V1_MIGRATION_NOTES.md  V2_MIGRATION_NOTES.md
docs/architecture/: MVP_ARCHITECTURE.md  README.md
docs/architecture/assets/: README.md
docs/eval/: README.md
docs/prompts/: README.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/components/ui/: scroll-area.tsx
frontend/src/: App.tsx  ProductOverviewPage.tsx  api.ts  index.css
scripts/colab/: start_vector_server.py
scripts/demos/: README.md  generate_v2_evidence_bundle.py  run_demo.ps1  run_demo.py  run_v2_full_trial_demo.py
scripts/eval/: README.md  eval_retrieval_baseline.py  retrieval_baseline_queries.json  smoke_case_intake.py  smoke_legal_search.py  smoke_openrouter_provider.py  smoke_review_export.py  smoke_simulation.py  smoke_v1_eval_cases.py  smoke_v1_hearing_runtime.py  smoke_v1_negative_guards.py  smoke_v2_eval_cases.py  smoke_v2_trial_runtime.py
scripts/ingest/: README.md  build_legal_corpus.py  build_vector_index.py
scripts/setup/: configure_provider_cli.py
