[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-courtroom-harness"
version = "0.1.0"
description = "Phase 0 skeleton for AI Courtroom Harness"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "fastapi>=0.115.0",
  "huggingface-hub>=0.25.0",
  "httpx>=0.28.0",
  "pydantic>=2.8.0",
  "pypdf>=5.5.0",
  "pyarrow>=21.0.0",
  "rank-bm25>=0.2.2",
  "uvicorn>=0.30.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["packages/shared/python"]
include = ["ai_court_shared*"]
